# VLRScraper

./: README.md  pyproject.toml  regressions.json  requirements.txt  tox.ini
.github/workflows/: deploy.yml  python-publish.yml  python-testing.yml  quality.yml  test.yml
docs/source/: conf.py  controllers.rst  index.rst  modules.rst  resources.rst  utils.rst
src/vlrscraper/: constants.py  controllers.py  logger.py  match.py  player.py  resource.py  resources.py  scraping.py  team.py  utils.py  vlr_resources.py
tests/: conftest.py  helpers.py  test_match.py  test_player.py  test_resource.py  test_scraping.py  test_team.py  test_utils.py
